# digamma

./: .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  debug_blue.scm  format.py  nodepad.scm  repl_input.scm  repro.scm  repro_cdecl_closure  scheme.cpp  test-lift.scm  test.cpp  test_boost_throw.cpp  test_codegen  test_env.scm  test_hash  test_unwind.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: arm64-vcpkg.yml  ci-llvm19.yml  ci-llvm20.yml  ci-llvm21-amd64.yml  ci-llvm21-arm64.yml  ci-llvm21-macos.yml  ci-llvm21.yml  ci-llvm22-arm64.yml  ci-llvm22-macos.yml  ci-llvm22.yml  ci-llvm23.yml  ci.yml  docker.yml
bench/: Makefile  baseline.txt  baseline_i.txt  baseline_ir.txt  baseline_n.txt  baseline_x64.txt  baseline_x86_2.txt  benchmark.py  benchmark_baseline.html  benchmark_report.html  nqueens.digamma-coreform.scm  nqueens.digamma-ir.scm  nqueens.llvm-ir.ll  nqueens.llvm-x64.asm  nqueens.scheme.scm  nqueens.x64.asm  run-chez-only-one.scm  run-chez-only-one.scm.html  run-chez.scm  run-digamma-jit.scm  run-digamma.scm  run-gosh-only-one.scm  run-gosh.scm  run-guile.scm  run-nanos-only-one.scm  run-nanos.scm  run-petite.scm  run-sash.scm  run-ypsilon.scm
bench/gambit-benchmarks/: boyer.scm  ctak.scm  dderiv.scm  divrec.scm  fibc.scm  nqueens.scm  paraffins-tuple.scm  ray.scm  scheme.scm
boot/: README.md  build-core-ir.scm  core-ir.lst  core.ir  host-macro.scm  host_macro.scm  prelude.scm  target-env.scm  target-prelude.scm
core/: bytecode.scm  common.scm  compiler.scm  core.scm  env.scm  eval.scm  host.scm  lambda-lift.scm  macroexpand.scm  module.scm  optimizer.scm  quasiquote.scm  required_subrs.txt  syntax-case.scm  syntax-rules.scm  syntax_case.scm  syntax_rules.scm
core/tests/: disabled_test_optimizer.scm  run_tests.sh  test_closure_analysis.scm  test_common.scm  test_compiler.scm  test_core.scm  test_destruct.scm  test_hygiene.scm  test_lambda-lift.scm  test_letrec_star_expansion.scm  test_licm.scm  test_macroexpand.scm  test_macroexpand_1.scm  test_macroexpand_2.scm  test_module_macroexpand.scm  test_optimizer.scm  test_peephole.scm  test_quasiquote.scm  test_r6rs_extra.scm  test_r7rs_extra.scm  test_syntax.scm  test_syntax_case.scm  test_syntax_rules.scm
demo/: freetype-demo.scm  glcorearb-demo.scm  glfw-demo.scm  glfw-gl-demo.scm  glut-demo.scm  widget-demo.scm
heap/: Makefile  bootimage.code  bootimage.vmi  build-boot-code.scm  build-boot-fasl.scm  build-composit.scm  build-core-code.scm  build-core-fasl.scm  build-debug-boot.scm  build-debug-core.scm  coreimage.code  coreimage.vmi  debug-boot.vmi  debug-core.vmi
heap/boot/: common.scm  compile.scm  condition.scm  dynamic-wind.scm  eval.scm  exception.scm  first-load.scm  interaction.scm  libraries.scm  parameter.scm  pp.scm  r6rs-aux.scm  record.scm
meta/: main.scm  repl.scm  vm.scm
meta/tests/: run_tests.sh  test_repl.scm  test_variadic.scm  test_vm.scm
research/: run_all_tests.sh
research/closure/: alpha_conversion.scm  closure_conversion.scm  constant_folding.scm  derived_syntax.scm  expand_coreform.scm  lambda_inlining.scm  quasiquote.scm  run_tests.sh  test_alpha_conversion.scm  test_closure.scm  test_constant_folding.scm  test_derived_qq.scm  test_derived_syntax.scm  test_lambda_inlining.scm  test_quasiquote.scm
research/opt/: optimizer.scm  run_tests.sh  test_optimizer.scm
research/repl/: repl.scm  run_tests.sh  test_repl.scm
research/syntax/: lambda_star.scm  macroexpand.scm  quasiquote.scm  r7rs_lib_manual_test.scm  r7rs_library.scm  r7rs_test.scm  run_tests.sh  syntax_case.scm  syntax_common.scm  syntax_rules.scm  test_destruct.scm  test_hygiene.scm  test_letrec_star_expansion.scm  test_local_macros.scm  test_macroexpand.scm  test_macroexpand_1.scm  test_macroexpand_2.scm  test_module_macroexpand.scm  test_quasiquote.scm  test_r6rs_extra.scm  test_r7rs_extra.scm  test_renamed_exports.scm  test_syntax.scm  test_syntax_case.scm  (+3 more)
sandbox/: main.scm
scratch/: test_uvector_32.scm
src/: arch.h  arch_amd64.cpp  arch_amd64.h  arch_arm64.cpp  arch_arm64.h  arith.cpp  arith.h  asio.cpp  asio.h  bag.cpp  bag.h  bit.cpp  bit.h  codegen.cpp  codegen.h  codegen.inc.cpp  codegen.inst0.cpp  codegen.inst1.cpp  codegen.macro.cpp  codegen.thunk.cpp  codegen_aux.cpp  codegen_aux.h  codegen_common.h  codegen_emit.cpp  codegen_inline.cpp  codegen_map.cpp  codegen_subr.cpp  codegen_subr.h  concurrent_heap.cpp  concurrent_heap.h  concurrent_pool.cpp  concurrent_pool.h  concurrent_slab.cpp  concurrent_slab.h  cond.h  context.cpp  context.h  continuation.cpp  continuation.h  core.h  (+126 more)
stdlib/: core.scm
test/: async-test.scm  c-ffi-test.scm  codegen.scm  nodepad.scm  r7rs-test.scm  test-lite.scm  tmp2  tmp3
tests/: module-pp.scm  nqueens.scm  opt-test.scm  r4rs-test.scm  repro_apply.cpp  repro_cdecl_closure.cpp  repro_musttail_apply.cpp  run_tests.sh  test-fiber.scm  test-mini-stress.scm  test-module-destruct.scm  test-module-param.scm  test-module-proc-helper.scm  test-module.scm  test-syntax.scm  test_apply_patterns.cpp  test_arith.cpp  test_call_cc.cpp  test_call_ec.cpp  test_cffi.cpp  test_closure_analysis.cpp  test_closure_patterns.cpp  test_codegen.cpp  test_codegen_aux.cpp  test_compiler.cpp  test_core.cpp  test_deriv.cpp  test_dynamic_wind.cpp  test_equiv.cpp  test_eval.cpp  test_gc.cpp  test_hash.cpp  test_io.cpp  test_list.cpp  test_modules.scm  test_object.cpp  test_port.cpp  test_printer.cpp  test_printer_printf.cpp  test_put_io.scm  (+12 more)
toolbox/: gen-digamma-gl.scm  gen-digamma-glcorearb.scm  gen-digamma-glfw.scm  gen-digamma-glut.scm  show-gl-version.scm
unicode/: Makefile  build-lexeme-code.scm  build-ucd-1.scm  build-ucd-2.scm  build-ucd-code.scm  canonical-class.inc  case-folding.inc  compatibility.inc  compose.inc  decompose.inc  general-category-1.inc  general-category-2.inc  numeric-property.inc  other-alphabetic.inc  other-lowercase.inc  other-uppercase.inc  simple-lowercase.inc  simple-titlecase.inc  simple-uppercase.inc  special-casing-lower.inc  special-casing-title.inc  special-casing-upper.inc
(+127 files in other folders)
